--- a/docs/requirements-dev.txt
+++ b/docs/requirements-dev.txt
@@ -3,11 +3,12 @@ black==22.10.0
 codecov==2.1.12
 coverage[toml]==6.5.0
 flit==3.7.1
+hypothesis==6.58.1
 lint==1.2.1
 mypy==0.982
-pylint==2.15.5
+pylint==2.15.4
 sphinx==5.3.0
 pytest>=6.0.0
-pytest-asyncio==0.20.1
+pytest-asyncio==0.20.2
 pytest-xdist==2.5.0
 pytest-assume==2.4.3
