--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,11 +14,11 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install twine 
+        pip install twine
     - name: Build manylinux Python wheels
       uses: RalfG/python-wheels-manylinux-build@v0.5.0-manylinux2014_x86_64
       with:
-        python-versions: 'cp38-cp38 cp39-cp39'
+        python-versions: 'cp38-cp38 cp39-cp39 cp310-cp310 cp311-cp311'
         build-requirements: 'cython numpy'
     - name: Publish wheels to Test PyPI
       env:
