--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [build-system]
 requires = [
     'setuptools==67.6.1',
-    'Cython==3.0.6',
+    'Cython==3.0.9',
     'wheel==0.42.0',
     'flit'
 ]
@@ -24,6 +24,7 @@ classifiers=[
   "Programming Language :: Python :: 3.9",
   "Programming Language :: Python :: 3.10",
   "Programming Language :: Python :: 3.11",
+  "Programming Language :: Python :: 3.12",
   "Programming Language :: Python",
   "Typing :: Typed",
   "Environment :: Web Environment",
